--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -89,3 +89,5 @@ include::vtn/vtn-user.adoc[]
 include::controller/netconf/odl-netconf-user.adoc[]
 
 include::yang-push/odl-yang-push-user.adoc[YANG-PUSH]
+
+include::unimgr/unimgr-user.adoc[]
