Adding Unimgr User Guide
Change-Id: I329752a291e85198696a05fd3e0daa40a398bcde
Signed-off-by: Mufaddal Makati <m.makati@cablelabs.com>

--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -84,6 +84,8 @@ include::ttp/ttp-cli-tools-user.adoc[TTP]
 
 include::usc/odl-usc-channel-user.adoc[USC]
 
+include::unimgr/unimgr-user.adoc[]
+
 include::vtn/vtn-user.adoc[]
 
 include::controller/netconf/odl-netconf-user.adoc[]
