TSDR Lithium SR4 documentation
Update the documentation for HSQLDB replacing H2.

We had to replace H2 with HSQLDB because of H2's
dependency on mysql-java-connector.

Change-Id: I927168c4764f50e17292979e792676db38bf8bfc
Signed-off-by: YuLing Chen <yulingchen54@gmail.com>

--- a/manuals/getting-started-guide/src/main/asciidoc/bk-getting-started-guide.adoc
+++ b/manuals/getting-started-guide/src/main/asciidoc/bk-getting-started-guide.adoc
@@ -79,7 +79,7 @@ include::opflex/agent-ovs-install.adoc[]
 
 include::ovsdb/ovsdb-install.adoc[]
 
-include::tsdr/tsdr-h2-install.adoc[]
+include::tsdr/tsdr-hsqldb-install.adoc[]
 
 include::tsdr/tsdr-hbase-install.adoc[]
 
