--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -66,7 +66,7 @@ include::sxp/odl-sxp-user.adoc[]
 
 include::tcpmd5/odl-tcpmd5-all-user.adoc[TCP-MD5]
 
-include::tsdr/tsdr-h2-user.adoc[]
+include::tsdr/tsdr-hsqldb-user.adoc[]
 
 include::tsdr/tsdr-hbase-user.adoc[]
 
